Fix alignment of checkbox labels and descriptions
Broken by upstream changes in OOUI and MW core.

--- a/resources/betafeatures.nojs.less
+++ b/resources/betafeatures.nojs.less
@@ -73,11 +73,11 @@ table.mw-htmlform-container {
 
 .mw-htmlform-field-HTMLHorizontalRuleField .mw-input hr,
 .mw-ui-feature-contain {
-	margin-left: 42px;
+	margin-left: 32px;
 	width: 80%;
 }
 
-.mw-ui-feature-description {
+.mw-body-content p.mw-ui-feature-description {
 	margin: 1em 0 0 0;
 	padding-right: 1em;
 }
@@ -113,8 +113,8 @@ table.mw-htmlform-container {
 }
 
 .mw-ui-feature-title-contain {
-	margin-left: -42px;
-	margin-right: 42px;
+	margin-left: -32px;
+	margin-right: 32px;
 	margin-bottom: -10px;
 }
 
